--- a/style.css
+++ b/style.css
@@ -1,3 +1,493 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body{
-    background-color: aqua;
+    font-family: "Montserrat", sans-serif;
+}
+
+.row{
+    display: flex;
+    flex-direction: row;
+
+}
+.col-menu{
+    background-color: #000000;
+    width: 20%;
+}
+.menu-container{
+    margin-left: 30px;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+}
+.logo{
+
+}
+.logo img{
+    width: 65%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.lista{
+    margin-top: 10px
+}
+.lista ul{
+
+}
+.lista li{
+    display: flex;
+    padding-bottom: 5px;
+    align-items: center;
+}
+.lista li:first-child{
+    border-left: 4px solid #adff2f;
+    margin-left: -29px;
+
+}
+.lista li:first-child a{
+    color: rgba(255, 255, 255, 0.844);
+    display: flex;
+    margin-left: 25px;
+}
+.lista li:first-child a:hover{
+    color: white;
+}
+.lista li a{
+    display: flex;
+    align-items: center;
+    color: #696969;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 30px;
+}
+.lista li a:hover{
+    color: white;
+}
+.lista li img{
+    width: 10%;
+    margin-right: 5px;
+}
+.menu-playlist{
+    margin-top: 10px;
+    height: 100%;
+}
+.menu-playlist h3{
+    color: white;
+    font-size: 17px;
+    margin-top: 20px;
+}
+.menu-playlist ul{
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.menu-playlist ul li{
+    margin-top: 15px;
+}
+.menu-playlist ul li a{
+    text-decoration: none;
+    color: #696969;
+    font-weight: bold;
+    font-size: 15px;
+}
+.menu-playlist ul li a:hover{
+    color: white;
+}
+.menu-playlist li:first-child a{
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+}
+.menu-playlist li:first-child a i{
+    font-size: 50px;
+    margin-right: 15px;
+}
+.menu-sotto{
+
+}
+.col-install{
+    border-bottom: 1px solid white;
+    width: 230px;
+
+}
+.col-install a{
+    display: flex;
+    text-decoration: none;
+    color: #696969;
+    margin-bottom: 20px;
+}
+.col-install img{
+    width: 20px;
+    margin-right: 10px;
+}
+.col-profilo {
+    display: flex;
+    margin-bottom: 10px;
+}
+.col-profilo img{
+    width: 25px;
+    border-radius: 68px;
+    background-color: #696969;
+    margin-top: 15px;
+    margin-right: 15px; width: 25px;
+    border-radius: 68px;
+    background-color: #696969;
+    margin-top: 15px;
+}
+.col-profilo h3{
+    color: white;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+
+
+.col-corpo{
+    flex-direction: column;
+    display: flex;
+    width: 80%;
+    background-color: #141922;
+}
+.col-corpo .top{
+    justify-content: right;
+    display: flex;
+    width: 100%;
+    height: 100px;
+    background-color: #080b12;
+}
+.btn{
+    display: flex;
+    align-items: center;
+}
+.btn button{
+    font-weight: bold;
+    font-size: 13px;
+    text-transform: uppercase;
+    background-color: #080b12;
+    color: white;
+    border: 2px solid white;
+    border-radius: 50px;
+    padding: 15px 50px;
+    margin-right: 10px;
+}
+.btn button:hover{
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: uppercase;
+    background-color: #080b12;
+    color: white;
+    border: 2px solid white;
+    border-radius: 50px;
+    padding: 15px 50px;
+    margin-right: 10px;
+}
+.main-corpo-top{
+    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+}
+
+.main-corpo-top ul{
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.main-corpo-top ul li{
+    padding: 10px;
+}
+.main-corpo-top ul li a{
+    font-size: 14px;
+    font-weight: bold;
+    color: #696969;
+    text-decoration: none;
+}
+.main-corpo-top ul li a:hover{
+    color: white;
+}
+.linea-verde{
+    border-bottom: 2px solid #adff2f;
+    width: 35px;
+    margin: auto;
+}
+.main-corpo h2{
+    color: white;
+    margin-top: 45px;
+    margin-left: 20px;
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+.main-corpo span{
+    margin-top: 40px;
+    margin-left: 20px;
+    color: #696969;
+    font-size: 13px;
+    font-weight: bold;
+}
+.container-card{
+    display: flex;
+    margin-left: 20px;
+    margin-top: 40px;
+}
+
+.row-card{
+    display: flex;
+    gap: 17px;
+    flex-wrap: wrap;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    width: 180px;
+}
+
+.card img{
+    width: 100%;
+}
+.card img:hover{
+    font-size: 40px;
+    
+    opacity: 0.5;
+    content: '\f144';
+    font-family: 'Font Awesome\ 5 Free';
+    color: white;
+}
+.rotondo{
+    border-radius: 100%;
+}
+.descrizione{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.descrizione p{
+    margin-top: 10px;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+}
+.descrizione span{
+    color: #696969;
+    margin-top: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    margin-left: 0;
+}
+
+
+
+
+footer{
+    width: 100%;
+    height: 110px;
+    background-color: #282828;
+    position: fixed;
+    bottom: 0;
+}
+
+.row-footer{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.col-footer{
+    display: flex;
+}
+.sx{
+    display: flex;
+    justify-content: left;
+    width: 25%;
+}
+.m{
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 40%;
+}
+.dx{
+    display: flex;
+    justify-content: right;
+    width: 25%;
+}
+.col-footer img{
+    margin-left: 20px;
+    width: 18%;
+    margin-top: 20px;
+}
+
+.artist{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: 15px;
+    margin-top: 15px;
+    margin-right: 15px;
+}
+.artist a{
+    text-decoration: none;
+}
+.artist p{
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+}
+.artist span{
+    color: #696969;
+    font-weight: bold;
+    font-size: 13px;
+}
+.feater{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 27%;
+}
+.dx .feater{
+    flex-wrap: nowrap;
+    margin-right: 5px;
+}
+.feater a{
+    text-decoration: none;
+}
+.feater i:hover{
+    color: white;
+}
+.dx .feater i{
+    color: white;
+}
+.dx .feater i:hover{
+    color: rgba(255, 255, 255, 0.636);
+}
+.feater i{
+    color: #696969;
+    padding-right: 15px;
+}
+
+.tasti{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 13px;
+}
+.tasti ul{
+    list-style: none;
+    display: flex;
+}
+.tasti ul li{
+    display: flex;
+    font-size: 40px;
+    margin-right: 30px;
+    align-items: center;
+    margin-top: 15px;
+}
+.tasti ul li a{
+    color: white;
+    font-size: 20px;
+}
+.tasti ul li a:hover{
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 25px;
+}
+.tasti ul li:nth-child(3) a:hover{
+    font-size: 33px;
+}
+.tasti ul li:nth-child(3) a{
+    font-size: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.progress-barra{
+    width: 140px;
+    border: 2px solid #696969;
+    height: 2px;
+    display: flex;
+    align-items: self-end;
+    margin-top: 36px;
+    border-radius: 5px;
+}
+.m-barra{
+    border: 2px solid #696969;
+    height: 2px;
+    display: flex;
+    align-items: self-end;
+    border-radius: 5px;
+    width: 500px;
+    margin-top: 20px;
+}
+
+.dx-barra{
+    margin-top: 45px;
+    align-items: center;
+    width: 30%;
+    margin-right: 20px;
+}
+.progress{
+    width: 15%;
+    background-color: white;
+    height: 2px;
+    border-radius: 4px;
+    margin-bottom: -1px;
+    margin-left: -1px;
+}
+.progress:hover{
+    cursor: pointer;
+    width: 15%;
+    background-color: #adff2f;
+    height: 2px;
+    border-radius: 4px;
+    margin-bottom: -1px;
+    margin-left: -1px;
+}
+.time-1{
+    margin-top: 10px;
+    margin-right: 25px;
+}
+.time-1 span{
+    color: white;
+    font-size: 10px;
+    font-weight: bold;
+}
+.time-2{
+    margin-top: 10px;
+    margin-left: 25px;
+}
+.time-2 span{
+    color: white;
+    font-size: 10px;
+    font-weight: bold;
+}
+
+
+
+@media screen and (max-width:552px) {
+    
+    .col-menu {
+        background-color: #000000;
+        width: 10%;
+    }
+    .menu-container {
+        margin-left: 30px;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+    .col-corpo {
+        flex-direction: column;
+        display: flex;
+        width: 90%;
+        background-color: #141922;
+    }
 }
